# ChangeLog for media-sound/pianobar
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Apr 2009; Lance Albertson <ramereth@gentoo.org> pianobar-9999.ebuild:
  Import ebuild from wendall911's overlay [1] and remove references to
  cmake-utils as it breaks the install

  [1] http://github.com/wendall911/wendall911-overlay

*pianobar-9999 (29 Mar 2009)

  29 Mar 2009; Lance Albertson <ramereth@gentoo.org> +pianobar-9999.ebuild:
  Initial ebuild

  Thanks to Ben Kero (bkero@osuosl.org) for submitting it
