@@ -1,2 +1,13 @@
-EBUILD pianobar-9999.ebuild 877 RMD160 1d521490b66842f5430af5ab443b266699a6c8fd SHA1 4e1f8b50490fc357834493a24ada3732cae9949b SHA256 acad37d4a5c1c07ca7aceca89fb40f421beda756704244755acbed979ef137bb
-MISC ChangeLog 545 RMD160 3f5f35f936377f753ee8dcf062161d7baa287533 SHA1 3058fb98d3656fc040912dcf3cfcc2e3477572d9 SHA256 ae13893e774a8073db5f1a61800d358301e807e6bc973405de72bdb02db50049
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+EBUILD pianobar-9999.ebuild 860 RMD160 dc279e4c418cd87b043ba39674963a11ce6d1d5a SHA1 4e9708bb1c3418b8b72dd940660403ac5496729c SHA256 4a91f473739580d16db3b1c1a6edfd68482530874f904bfe45b067b715aed13d
+MISC ChangeLog 649 RMD160 6590a7023361d4a5a7a49ea4c15e78b52e00e35c SHA1 acdc264ff54e2f3ea32d8928af69f83f147da596 SHA256 a4b30e83e1f2f4dbc94ae82555decdb64bea99991862044af9bea43aceb8329d
+MISC metadata.xml 371 RMD160 b3017b7e61c8fbf3491fcb0375e852109e0b2e40 SHA1 b375c9af40866894c275621baa6044c85713fe98 SHA256 e33f15538f27d6d3ee998404be1823ccbc930548dbc792badea6380042db3d99
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iD8DBQFKlEhcQW+hXSf0t0IRAjNlAJ4/okkcTD3nh8OE2ADny8p1fyySqgCff4Nr
+lJFcLzCmleZis6tp8WjXzsI=
+=MTIu
+-----END PGP SIGNATURE-----
